AMDP-407 Fix headline spacing

--- a/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
+++ b/web/themes/custom/emoney_apigee_kickstart/sass/pages/_use_case.scss
@@ -12,6 +12,16 @@ $delete-bg: #a83e24;
     height: auto;
     min-height: 100%;
     padding-bottom: 130px;
+
+    .page {
+      &__header {
+        .page {
+          &__headline {
+            margin-top: 16px;
+          }
+        }
+      }
+    }
   }
 
   .use-case {
